--- a/_posts/2022-08-08-test.md
+++ b/_posts/2022-08-08-test.md
@@ -1,9 +1,6 @@
 ---
-short-name: test
-name: Testomat
-position: Testding
 ---
-# Ueberschrift
+Eine Beispielzusammenfassung
 
 ein Text mit  
 ![bild]({{ site.baseurl }}/bilder/test.jpg)  
