small work on style

--- a/_posts/2022-08-08-test.md
+++ b/_posts/2022-08-08-test.md
@@ -2,7 +2,7 @@
 ---
 Eine Beispielzusammenfassung
 
-ein Text mit  
+Ein Bild:  
 ![bild]({{ site.baseurl }}/bilder/test.jpg)  
+Ein Bild mit Link:  
 [![bild]({{ site.baseurl }}/bilder/test2.jpg)]({{ site.baseurl }}/bilder/test2.jpg)  
-<img src="{{ site.baseurl }}/bilder/test.jpg" width=200px>
